cabal-version:      2.4
name:               doenetchart
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jim Fowler
maintainer:         kisonecat@gmail.com 

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable doenetchart 
  ghc-options: -Wall
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  other-modules:       Configuration
                     , JsonWorkProof
                     , Authentication
                     , User
                     , Course
                     , AppM
                     , LTI
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base
                     , aeson ==1.5.6.0
                     , bytestring
                     , bcrypt
                     , email-validate
                     , string-random
                     , containers
                     , http-api-data
                     , http-types
                     , lens
                     , monad-logger
                     , mtl
                     , servant
                     , servant-auth
                     , servant-server
                     , servant-auth-server
                     , jose
                     , http-media
                     , x509-store
                     , x509
                     , wai-logger 
                     , dotenv
                     , stm
                     , hedis
                     , scrypt
                     , string-conversions
                     , text
                     , transformers
                     , wai
                     , wai-logger
                     , warp
                     , base64-bytestring
                     , cryptonite
                     , lti13
                     , memory
                     , time

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010

test-suite doenetchart-test 
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
